Remove some @SuppressWarnings